# herd

./: .gitignore  CONTRIBUTING.md  DECISIONS.md  DESIGN.md  README.md  pyproject.toml  validate.py
.github/: check-skips.py
.github/workflows/: test.yml
completions/: herd.bash
scripts/: spawn-smoke.sh
src/herd/: __init__.py  cli.py  config.py  daemon.py  db.py  doctor.py  install.py  settings.py  spawn.py  template.py
src/herd/hooks/: common.sh  notification.sh  post_tool_use.sh  preview.sh  session_end.sh  session_start.sh  statusline.sh  stop.sh  tab_sync.sh
src/herd/kitty/: config.py  focus.py  launch.py
src/herd/schema/: core.sql  herd.sql  writes.sql
tests/: conftest.py  helpers.py  test_attention.py  test_burn_rate.py  test_cascade_constraints.py  test_concurrency.py  test_config.py  test_doctor.py  test_focus_cli.py  test_hook_contract.py  test_hooks.py  test_installer.py  test_job_names.py  test_kitty_config.py  test_list_query.py  test_mutability.py  test_pager.py  test_pid_liveness.py  test_preview_bash.py  test_reaper.py  test_restart.py  test_schema.py  test_settings.py  test_source_invariants.py  test_spawn.py  test_statusline_e2e.py  test_statusline_sql.py  test_surrogate_key.py  test_tab_sync.py  test_template.py  test_tui_query.py  test_two_clocks.py  test_window_reuse.py
